--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
       run: npm test
 
     - name: Generate coverage report
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: npm run coverage
+
+    - name: Upload coverage to Coveralls
+      uses: coverallsapp/github-action@v2.3.4
+      with:
+        github-token: ${{ secrets.COVERALLS_REPO_TOKEN }} 
+        path-to-lcov: ./coverage/lcov.info 
