--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,19 @@ on:
   push:
     branches:
       - master
+      - main
   pull_request:
+    branches:
+      - master
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -24,11 +29,7 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Generate coverage report
+    - name: Generate coverage report and send to Coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: npm run coverage
-
-    - name: Upload coverage to Coveralls
-      uses: coverallsapp/github-action@v2.3.4
-      with:
-        github-token: ${{ secrets.COVERALLS_REPO_TOKEN }} 
-        path-to-lcov: ./coverage/lcov.info 
