--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,14 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Generate coverage report and send to Coveralls
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-      run: npm run coverage
+#    - name: Generate coverage report and send to Coveralls
+#      env:
+#        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+#      run: npm run coverage
 
     - name: Publish to coveralls.io
       uses: coverallsapp/github-action@v1.1.2
       with:
         github-token: ${{ github.token }}
+
+
